# pepper_dcm_robot

./: README.md  README.rst
pepper_dcm_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
pepper_dcm_bringup/config/: pepper_dcm.yaml
pepper_dcm_bringup/launch/: nao_dcm_H25_bringup_remote.launch  pepper_bringup.launch  pepper_dcm_bringup_position.launch
pepper_dcm_controllers/: CMakeLists.txt  package.xml
pepper_dcm_controllers/config/: pepper_position_control.yaml  pepper_trajectory_control.yaml  pepper_trajectory_control_H21.yaml  pepper_trajectory_controllers.yaml
pepper_dcm_controllers/launch/: pepper_control_position.launch  pepper_control_trajectory.launch  pepper_default_controllers.launch
pepper_dcm_driver/: CMakeLists.txt  package.xml
pepper_dcm_driver/include/pepper_dcm_driver/: pepper.h
pepper_dcm_driver/src/: pepper.cpp  pepper_driver.cpp
pepper_dcm_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
